karl/views/static/bottlecap-wire/livesearch.css
/* XXX belongs to the theme, not here
 *
.ui-state-default,
.ui-widget-content .ui-state-default,
.ui-widget-header .ui-state-default {
    background-image: url("ui-bg_glass_75_f0f2f4_1x400.png");
}

.ui-widget-content,
.ui-widget-content a {
    color: #333333;
}
*/

.bc-livesearch-autocomplete-category {
    font-weight: bold;
    padding: 6px 364px 0 0;
    margin: 4px 0 0 -102px;
    line-height: 1.5;
    border-top: solid #a3a3a3 1px;
    text-align: right;
    height: 0px;
}

.bc-livesearch-menu {
    width: 100px;
    position: absolute;
    margin-right:0;
    border-radius: 4px 0px 0px 4px;
    z-index: 99999;
    text-align: left;
}

.bc-livesearch-autocomplete-first {
    border: none;
}

.bc-livesearch-autocomplete-results {
    width: 350px;
    padding-left: 104px;
    background: #ffffff url(images/livesearch_bg.gif) repeat-y top left;
    font-size: .7em;
    border-color: #a3a3a3;
    min-height: 55px;
    z-index: 99999 !important;
    text-align: left;
    font-size: 12px;
    font-family: Verdana,Arial,sans-serif;
}

.bc-livesearch-autocomplete-notification {
    padding: 0;
    margin: 0;
    background-color: white;
    font-size: x-small;
    display: block;
    position: absolute;
    /* XXX this are problems in our themedstyles.css, it should be restricted there */
    z-index: 55555 !important;
    text-align: left;
    font-family: Verdana,Arial,sans-serif;
}

.bc-livesearch-autocomplete-msgicon {
    display: inline-block;
    float: left;
    width: 20px;
}

.bc-livesearch-autocomplete-notification {
    padding: 2px 0;
}

#searchbox .bc-livesearch-autocomplete-notification a.bc-livesearch-all-content,
#searchbox .bc-livesearch-autocomplete-notification a.bc-livesearch-all-content:visited {
    color: blue;
    font-size: 1em;
    text-decoration: none;
    border: none;
    display: inline;
    padding: 0;
    margin: 0;
}
#searchbox .bc-livesearch-autocomplete-notification a.bc-livesearch-all-content:hover {
    text-decoration: underline;
    border: none;
}

/*
.bc-header {
    background-color: #ADD8E6;
    border-bottom: solid #999999 1px;
    padding: 0.5em;
}

.ui-widget {
    font-size: 1.2em;
}

.bc-header h1 {
    margin-top: 0;
    margin-bottom: 0;
    font-size: 1.6em;
}
*/

.bc-header {
    /* XXX this are problems in our themedstyles.css, it should be restricted there */
    width: 410px !important;
}
.bc-header-toolbox {
    font-size: 10px;
    /* XXX this are problems in our themedstyles.css, it should be restricted there */
    text-align: right !important;
}

.bc-header-toolbox .ui-widget {
    font-size: 1.2em;
}

.bc-header-toolbox button {
    /* XXX this are problems in our themedstyles.css, it should be restricted there */
    float: none;
    height: 28px !important;
    line-height: 28px !important;
    font-size: 12px;
    font-family: Verdana,Arial,sans-serif;
    margin-right: 0 !important;
}
.bc-header-toolbox .ui-button .ui-button-text {
    line-height: 16px !important;
}
.bc-header-toolbox input {
    font-size: 12px;
}
.bc-header-toolbox .ui-button-icon-only .ui-icon {
    /* XXX this are problems in our themedstyles.css, it should be restricted there */
    height: 16px !important;
}

.bc-header-toolbox .bc-livesearch-autocomplete {
    -moz-border-radius: 4px 0 0 4px;
    border-radius: 4px 0 0 4px;
    border-color: #cecece;
    border-width: 1px 0;
    border-style: solid;
    padding: 0;
    width: 250px;
}

.bc-header-toolbox .bc-livesearch-btn-search {
    -moz-border-radius: 0 4px 4px 0;
    border-radius: 0 4px 4px 0;
    border-color: #cecece;
}

.bc-content-frame {
    margin: 2em;
}

/* XXX belongs to the theme
.ui-menu .ui-menu-item a:hover,
.ui-menu .ui-menu-item a.ui-state-hover {
    margin: 0;
    border: 1px solid #999999;
    background: #e1e1e1 url('images/ui-bg_glass_75_dadada_1x400.png') repeat-x scroll 50% 50%;
}
*/

.bc-livesearch-autocomplete-results .ui-menu-item a {
    border: 1px solid #ffffff;
}

.bc-livesearch-autocomplete-results .ui-menu-item a:hover,
.bc-livesearch-autocomplete-results .ui-menu-item a.ui-state-hover {
/* override the jiggling efect of menu lines
 * ... belongs to the theme. This setting will crack all other components
 * that don't wish to override the theme in the same way.
 */
    margin: 0;
    border: 1px solid #999999;
}


.bc-livesearch-profile img {
    float: left;
    margin-right: 10px;
    height: 32px;
    width: 32px;
}

.bc-livesearch-profile .extension {
    margin-right: 2em;
}

.bc-livesearch-file img {
    float: left;
    margin-right: 5px;
    height: 16px;
    width: 16px;
}

.ui-menu .ui-menu-item .bc-livesearch-profile a.email {
    display: inline;
    color: blue;
    background: none;
    border: none;
    margin: 0;
    padding: 0;
    text-decoration: none;
}

.ui-menu .ui-menu-item .bc-livesearch-profile a.email:hover {
    text-decoration: underline;
}

.bc-livesearch-autocomplete-results .discreet {
    color: #999;
    font-size: 85%;
}

.bc-livesearch-category-text {
    position: absolute;
    left: 0;
    width: 91px;
}

.bc-livesearch-more {
    color: blue;
    display: block;
    position: absolute;
    width: 91px;
    margin-top: 15px;
    left: 0;
}

.bc-livesearch-more:hover {
    cursor: pointer;
    text-decoration: underline;
}

.bc-livesearch.ui-autocomplete-loading {
    background-image: url('images/pbar-ani.gif');
}

